<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewSwitcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="#F3F4F6"
        tools:context=".LoguearActivity">

        <!-- CardView para borde redondeado -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardBackgroundColor="#FFFFFF">

            <!-- Contenido del login -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp"
                android:gravity="center_horizontal">

                <!-- Título del login -->
                <TextView
                    android:id="@+id/tvLoginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcomeTitle"
                    android:textSize="28sp"
                    android:textColor="#333333"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp" />

                <!-- Subtítulo -->
                <TextView
                    android:id="@+id/tvSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description1"
                    android:textSize="16sp"
                    android:textColor="#666666"
                    android:layout_marginBottom="24dp" />

                <!-- Campo de correo -->
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailText"
                    android:textColorHint="#CCCCCC"
                    android:backgroundTint="#CCCCCC"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp" />

                <!-- Campo de contraseña -->
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordText"
                    android:textColorHint="#CCCCCC"
                    android:backgroundTint="#CCCCCC"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp" />

                <!-- Sección de checkbox alineado a la izquierda -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start"
                    android:layout_marginBottom="16dp">

                    <CheckBox
                        android:id="@+id/cbRememberMe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rememberText"
                        android:textColor="#666666" />
                </LinearLayout>

                <!-- Botón de iniciar sesión -->
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/loginText"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#4CAF50"
                    android:paddingVertical="12dp"
                    android:layout_marginBottom="16dp" />

                <!-- Botón de registrarse  -->
                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registerTextQuestion"
                    android:textColor="#3F51B5"
                    android:textSize="14sp"
                    android:gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Vista de registrarse -->
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="#F3F4F6"
        tools:context=".LoguearActivity">

        <!-- CardView para borde redondeado -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardBackgroundColor="#FFFFFF">

            <!-- Contenido del login -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp"
                android:gravity="center_horizontal">

                <!-- Título del register -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registerTitle"
                    android:textSize="28sp"
                    android:textColor="#333333"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp" />

                <!-- Subtítulo -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle2"
                    android:textSize="16sp"
                    android:textColor="#666666"
                    android:layout_marginBottom="24dp" />

                <!-- Campo de nombre -->
                <EditText
                    android:id="@+id/etRegisterName"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/nameText"
                    android:textColorHint="#CCCCCC"
                    android:backgroundTint="#CCCCCC"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp" />

                <!-- Campo de correo -->
                <EditText
                    android:id="@+id/etRegisterEmail"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailText"
                    android:textColorHint="#CCCCCC"
                    android:backgroundTint="#CCCCCC"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp" />

                <!-- Campo de contraseña -->
                <EditText
                    android:id="@+id/etRegisterPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordText"
                    android:textColorHint="#CCCCCC"
                    android:backgroundTint="#CCCCCC"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp" />


                <!-- Botón de iniciar sesión -->
                <Button
                    android:id="@+id/btnRegisterLogin"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/registerText"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#4CAF50"
                    android:paddingVertical="12dp"
                    android:layout_marginBottom="16dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ViewSwitcher>
